--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>ninja</title>
-    <link rel="stylesheet" href="testSuite.css">
-    <script src="testSuite.js"></script>
+    <link rel="stylesheet" href="./testSuite/testSuite.css">
+    <script src="./testSuite/testSuite.js"></script>
 </head>
 <body>
     <ul id="results"></ul>
